# crispasr-agent-transcriber

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml  server.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  publish-mcp.yml  publish-npm.yml  publish-pypi.yml  release.yml
assets/: README.md
docs/: agent_integrations.md  codex_usage.md  crispasr_setup.md  mcp_usage.md  plugin_install.md  publishing.md  release.md  security.md
examples/: audio_transcription.md  codex_prompts.md  video_transcription.md
mcp_server/crispasr_mcp/: __init__.py  server.py  tools.py
npm/: README.md  package-lock.json  package.json
npm/src/: cli.js  constants.js  errors.js  installer.js  marketplace.js  release.js  system.js
npm/test/: cli.test.js  installer.test.js  marketplace.test.js  release.test.js
scripts/: build_plugin_bundle.py  setup.ps1  transcribe.py
skills/crispasr-transcription/: SKILL.md
skills/crispasr-transcription/references/: crispasr_server.md
skills/crispasr-transcription/scripts/: transcribe.py
src/crispasr_agent_transcriber/: __init__.py  cli.py  client.py  crispasr_manager.py  errors.py  language.py  media.py  models.py  profiles.py  schemas.py  server_manager.py  video_understanding.py  workflow.py
tests/: helpers.py  test_cli.py  test_client.py  test_crispasr_manager.py  test_distribution_metadata.py  test_language.py  test_mcp_server.py  test_mcp_tools.py  test_media.py  test_models.py  test_plugin_bundle.py  test_profiles.py  test_server_manager.py  test_video_understanding.py  test_workflow.py
