[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crispasr-agent-transcriber"
version = "0.1.0"
description = "Local CrispASR transcription workflow for Codex and MCP agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "crispasr-agent-transcriber contributors" },
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
mcp = [
  "mcp>=1.2",
]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[project.scripts]
crispasr-agent-transcribe = "crispasr_agent_transcriber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crispasr_agent_transcriber", "mcp_server/crispasr_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src", "mcp_server"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
